--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -109,4 +109,50 @@
             margin-top: 32px;
         }
     }
+
+    @media(max-width: 820px) {
+        main {
+            .room-title {
+                justify-content: center;
+            }
+            
+            form, .question-list {
+                max-width: 90%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+        
+    }
+
+    @media(max-width: 600px) {
+        header {
+            .content {
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: 16px;
+            }
+        }
+
+        main {
+            .room-title {
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 16px
+            }
+        }
+    }
+
+    @media(max-width: 550px) {
+        .content {
+            > div {
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                gap: 16px;
+            }
+        }
+    }
 }
